--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "darkaonline/l5-swagger": "6.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/passport": "9.3.2",
         "laravel/tinker": "^1.0",
         "zircote/swagger-php": "2.*"
     },
